@@ -1,5 +1,13 @@
 #!/bin/bash
 
+CATALINA_HOME=/path/to/cat
+CATALINA_OPTS=-Xms256m -Xmx1024m -XX:MaxPermSize=256m
+
+echo "
+
+CATALINA_HOME=$CATALINA_HOME
+CATALINA_OPTS=$CATALINA_OPTS" >> /home/wasp/.bash_profile
+
 #will need to automate this to get specific tags (most recent? git describe --abbrev=0 --tags )
 
 WASP=( 'central|master' 'wasp-config|image' 'wasp-illumina|master' 'mps-tools|master' \
@@ -15,6 +23,7 @@ for W in "${WASP[@]}"; do
 	cd ${w[0]}
 	git checkout ${w[1]}
 	#switch tag
+	mvn clean install -Dcatalina.home=$CATALINA_HOME -DskipTests=true
 	cd ..
 done
 
